[package]
name = "bno08x"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bno08x"
crate-type = ["cdylib"]


[[bin]]
name = "my_commandline"
path= "src/cli.rs"

[dependencies]
pyo3 = "0.21.2"
bno080 = "0.1.3"
# linux-embedded-hal = "0.4.0"
rppal = { version = "0.17.1", features = ["embedded-hal-0"] }
